--- a/blocks/elemenst.css
+++ b/blocks/elemenst.css
@@ -53,6 +53,13 @@
     }
 }
 
+@media screen and (min-width: 425px) and (max-width: 1024px) {
+    .elements__img {
+        grid-template-columns: repeat(2, 1fr); 
+    }
+    
+}
+
 @media screen and (min-width: 1024px) {
     .elements__img {
         grid-template-columns: repeat(3, 1fr); 
