--- a/blocks/elemenst.css
+++ b/blocks/elemenst.css
@@ -42,7 +42,7 @@
     font-weight: 900; 
     margin: 0; 
 }
-.element__heart-like:hover{
+.element__like:hover{
     cursor: pointer;
     opacity: 0.5;
 }
