--- a/blocks/elemenst.css
+++ b/blocks/elemenst.css
@@ -50,12 +50,15 @@
 @media screen and (max-width: 425px) {
     .elements__img {
         grid-template-columns: repeat(1, 1fr); 
+        margin: 10px;
     }
+
 }
 
 @media screen and (min-width: 425px) and (max-width: 1024px) {
     .elements__img {
         grid-template-columns: repeat(2, 1fr); 
+        margin: 10px;
     }
     
 }
@@ -63,6 +66,7 @@
 @media screen and (min-width: 1024px) {
     .elements__img {
         grid-template-columns: repeat(3, 1fr); 
+        margin: 10px;
     }
     
 }
