--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -1,10 +1,9 @@
 /* Estilos base del modal */
 .popup {
     margin: 0 auto;
-    max-width: 430px;
-    height: 330px;
+
     position: fixed;
-    top: 40%;
+    top: 38%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: "inter", sans-serif;
@@ -27,6 +26,8 @@
     width: 100%;
     max-width: 430px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 430px;
+    height: 330px;
     position: relative;
 }
 
@@ -60,10 +61,15 @@
     height: auto;
 }
 
+.popup__form-container{
+    margin-left: 35px;
+    margin-top: 30px;
+}
+
 .popup__heading {
     font-size: 24px;
     color: #000000;
-    margin: 0;
+    margin-left: 35px ;
     text-align: left; /* Alinear a la izquierda */
     font-weight: 900;
 }
@@ -77,6 +83,7 @@
 
 .popup__button {
     width: 360px;
+    height: 50px;
     padding: 10px;
     background-color:transparent;
     color:#C4C4C4;
@@ -85,10 +92,11 @@
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin-top: 50px;
 }
 
 .popup__button:hover {
-    opacity: 0.5;
+    background-color: black;
 }
 .popup__line{
     width: 360px;
@@ -99,7 +107,8 @@
     .popup {
         width: 100%;
         height: 100%;
-        top: 0;
+        top: -5%;
+        
         left: 0;
         transform: none;
     }
@@ -108,7 +117,6 @@
         width: 100%;
         max-width: 280px;
         height: 320px;
-        
     }
     .popup__content {
         top: 0;
@@ -116,12 +124,14 @@
     }
     .popup__form {
         gap: 10px;
+        margin-right: 30px;
     }
     .popup__input {
         width: 100%;
     }
     .popup__button {
         width: 100%;
+        height: 50px;
     }
     .popup__heading {
         font-size: 20px;
@@ -130,6 +140,9 @@
         position: absolute;
         top: -50px;
         right: 10px;
+    }
+    .popup__line{
+        width: 100%;
     }
     
 }
