--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -98,6 +98,7 @@
     .profile__name {
         font-size: 32px;
         margin-right: 10px;
+        
     }
 
     .profile__edit-button {
@@ -141,7 +142,11 @@
     }
 
     .profile__name {
+        margin-right: 0 ;
         font-size: 22px;
+        word-wrap: break-word;
+        white-space: normal;
+        text-align: center;
     }
 
     .profile__info-item {
