--- a/pages/index.css
+++ b/pages/index.css
@@ -6,4 +6,5 @@
 @import url("../blocks/elemenst.css");
 @import url("../blocks/footer.css");
 @import url("../blocks/popup.css");
+@import url("../blocks/popup__overlay.css");
 
