--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -77,7 +77,8 @@
     height: 50px;
     width: 360px;
     border: none;
-    
+    position: relative;
+    top: 14px;
 }
 
 .popup__button {
@@ -107,7 +108,6 @@
         width: 100%;
         height: 100%;
         top: -5%;
-        
         left: 0;
         transform: none;
     }
